# pencil-code

./: .cvsignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  Makefile  README  README.md  auto-test  dependencies.dot  getconf.csh  meanfield.f90  paper  run.csh  runExample  source_me  sourceme.csh  sourceme.sh  sourceme_quiet.csh  start.csh  start_run.csh  toto
PencilCode/: __init__.py  analyze.py  animate.py  find.py  math.py  plot.py  read.py  write.py
config/: Makefile  Makefile-common.conf  Makefile.baseline  Makefile.treesource  Makfile-common.conf  README  TEMPLATE  adapt-and-clean  build-tree  runtime-common.conf
crayon/: .cvsignore  README
doc/: .cvsignore  .gitignore  ConfigurationDoc.txt  Makefile  README  dependencies.dot  diag-table.tex  dotted.idxsty  extract-diag-doc  gsl-header.texi  inlinedoc-bcx.tex  inlinedoc-bcy.tex  inlinedoc-bcz.tex  inlinedoc-diag.tex  inlinedoc-mod.tex  inlinedoc-modules.tex  inlinedoc-phiavg.tex  inlinedoc-xyavg.tex  inlinedoc-xzavg.tex  inlinedoc-yavg.tex  inlinedoc-yzavg.tex  inlinedoc-zavg.tex  manual.css  manual.tex  manual.texi  manual_ch.tex  parameters_ch.tex  structure.dot  version-ref.texi
dx/: dx_slices.f90  hydro.net  mhd.net  mhd1.net  todx.f  todx_magn.f  todx_magn.f90  uu-anim-wi.cfg  uu-anim-wi.net  viz-bb-jj.cfg  viz-bb-jj.net  viz1.cfg  viz1.net  viz2.cfg  viz2.net
idl/: bbsections.pro  calcvar.pro  clean.pro  compare_runs.pro  constants.pro  evol.pro  exponent.pro  extra.pro  extra_ez.pro  extra_ion.pro  hsections.pro  integrate.pro  ioncalc.pro  minkowski.pro  n.pro  pc_check_math.pro  pc_check_quantities.pro  pc_convert_hdf5.pro  pc_convert_vars_struct.pro  pc_derive_quantity.pro  pc_extract_streamline.pro  pc_find_streamline.pro  pc_get_parameter.pro  pc_get_quantity.pro  pc_get_streamline.pro  pc_init.pro  pc_nan_inform.pro  pc_noghost.pro  pc_select_streamline.pro  pc_set_precision.pro  pc_write_kdat.pro  pencilconstants.pro  phiavg.pro  power.pro  power_snapshot.pro  pphiavg.pro  pscaleh.pro  psect.pro  psoundwave.pro  pvert.pro  (+39 more)
julia/: Fortran.jl  Pencil.jl  PencilPlot.jl  README.md  make_manual.jl
license/: CODE_OF_CONDUCT.md  GNU_public_license.txt  authors.txt  contributor_guidelines.md  developers.txt  owners+voters.txt
mathematica/: README  generateKVEC.nb  pc.wl  pcDerivative.wl  pcGetParam.wl  pcParticleStalker.wl  pcPlot.wl  pcPlot3D.wl  pcPowerSpec.wl  pcPowercor.wl  pcRead1D.wl  pcRead2D.wl  pcRead3D.wl  pcReadBasic.wl  pcReadFFT.wl  pcReadVAR.wl  pcStreamLine.wl  pcSub.wl  pcTFM.wl  pcUtils.wl  sample_script.wls
misc/: find_alpha.c  find_alpha_oddl.c
numpy/: README
pc_python/: README  __init__.py
perl/: Namelist.pm
python/: README  TO_DO_LIST.txt  setup.py
remesh/: README  remesh.in
samples/: README  README.1  README.md
src/: .cvsignore  Makefile  Makefile.depend  Makefile.inc  Makefile.library  Makefile.local  Makefile.parent  Makefile.src  Makefile_g95.incl  Makefile_gfortran.incl  X  (+632 more)
src/astaroth/: CMakeLists.txt  Makefile  Makefile.depend  Makefile.extern  Makefile.local  Makefile.target  PC_module_parfuncs.h  PC_moduleflags.h  PC_modulepars.h  PC_modulesources.h  README_install.md  build_astaroth.sh  build_cmake.sh  build_rest.sh  conflicts  cparam.local_c.h  cparam_c.h  forcing.h  gpu_astaroth.cc  gpu_astaroth_cpubcs.cc  legacy_code.cc  link.sh  loadStore.cc  loadStore.h  loaders.h  run_scripts.sh  solve.sed  stencil_loader.h  torch.cc  transpile.py  update_fortran.py
src/astaroth/DSL/: GW-rhs.h  GW_end.h  axionSU2back.h  backreact_infl.h  df_declares.h  diff.out  fieldecs.h  floors_and_ceilings.h  freeze_df.h  gravitational_waves.h  handwritten_end.h  implicit_diffusion.h  ioncalc.h  magnetic_decay_production_solve_two.ac  newton_cooling.h  phys_consts.h  polymer.h  preamble.h  prerequisites.h  selfgravity.h  shear.h  solve.ac  solve_two.ac  solver.ac  steps.h  steps_single.h  steps_two.h  steps_two_full.h  timeavg.h  train.h  typedefs.h  viscosity.h
src/astaroth/DSL/alphadisk/: after_timestep.h
src/astaroth/DSL/bcs/: funcs.h  funcs_full.h  funcs_overload.h
src/astaroth/DSL/density/: continuity.h  diffusivity.h  mass_conservation.h
src/astaroth/DSL/entropy/: after_boundary.h  heat_cond_K_prof.h  heat_cond_chi_prof.h  heat_cond_const_K.h  heat_cond_const_chi.h  heat_cond_hyper3.h  heat_cond_kramers.h  heat_ss.h  heatcool.h
src/astaroth/DSL/forcing/: getforce.h  pcstyleforcing.h
src/astaroth/DSL/hydro/: before_boundary.h  hydro_after_boundary_conservative.h  momentum.h  momentum_reduction_optimized.h  viscosity.h
src/astaroth/DSL/magnetic/: before_boundary.h  induction.h  magnetic_diffusivity.h
src/astaroth/DSL/radiation/: Qfinalize.h  Qintrinsic.h  Qrevision.h  integrate.h  opacity.h  source_function.h  steps.h
src/astaroth/DSL/shock/: highorder.h  kernels.ac  kernels.bak  shock_highorder.h  utils.h
src/astaroth/DSL/sld/: sld.h
src/astaroth/DSL/supernova/: explode_SN.h
src/astaroth/DSL/training/: train.h
src/cuda/src_new/: CMakeLists.txt  Makefile  Makefile.depend  README  gpu_astaroth.cc  gpu_astaroth_new.cc  howtoadd_makefiledepend_to_cmakelists.txt
src/cuda/src_new/common/: CMakeLists.txt  config.cc  config.h  datatypes.h  defines.h  defines_PC.h  defines_dims_PC.h  errorhandler.h  forcing.h  grid.cc  grid.h  qualify.h  slice.cc  slice.h
src/cuda/src_new/diagnostics/: diagnostics.h  timeseries_diagnostics.cc
src/cuda/src_new/gpu/: CMakeLists.txt  gpu.cc  gpu.h
src/cuda/src_new/gpu/cuda/: cuda_generic.cu  cuda_generic.cuh
src/cuda/src_new/gpu/cuda/core/: concur_cuda_core.cu  concur_cuda_core.cuh  copyHalosConcur.cu  copyHalosConcur.cuh  cuda_core.cu  cuda_core.cuh  dconsts_core.cuh  errorhandler_cuda.cuh
src/cuda/src_new/gpu/cuda/generic/: boundcond_cuda_generic.cu  boundcond_cuda_generic.cuh  collectiveops_cuda_generic.cu  collectiveops_cuda_generic.cuh  diff_cuda_generic.cuh  rk3_cuda_generic.cu  rk3_cuda_generic.cuh  rk3_cuda_generic_from_astaroth_master_for_reference_remove_me.cu  rk3_entropy.cu  rk3_entropy.cuh  slice_cuda_generic.cu  slice_cuda_generic.cuh
src/cuda/src_new/utils/: utils.h
(+6298 files in other folders)
